# Python-Project-Gayathri

./: README.md  data_scraping.py  interactive_movie_search.py  movies.csv  pyproject.toml
