[tool.poetry]
name = "movie-suggestions"
version = "0.1.0"
description = ""
authors = ["GythG gythrg@amazon.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.14.0"
chromedrivermanager = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

